--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 sudo: false
 env:
  global:
+   - EXTRA_REMOTES="git://github.com/mirage/mirage-dev.git"
    - PRE_INSTALL_HOOK="cd /home/opam/opam-repository && git pull origin master && opam update -u -y"
    - PACKAGE="hvsock"
  matrix:
