--- a/hvcat.opam
+++ b/hvcat.opam
@@ -7,15 +7,14 @@ dev-repo: "https://github.com/mirage/ocaml-hvsock.git"
 bug-reports: "https://github.com/mirage/ocaml-hvsock/issues"
 
 build: [
-  ["ocaml" "setup.ml" "-configure" "--%{alcotest:enable}%-tests" ]
-  [make]
+  [ "jbuilder" "subst"] {pinned}
+  [ "jbuilder" "build" "-p" name "-j" jobs ]
 ]
 
 build-test:[
-  [make "test"]
+  [ "jbuilder" "subst"] {pinned}
+  [ "jbuilder" "runtest" ]
 ]
-install: [make "install"]
-remove: ["ocamlfind" "remove" "hvsock"]
 
 depends: [
   "base-bytes"
