--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,3 @@
-*.annot
-*.cmo
-*.cma
-*.cmi
-*.a
-*.o
-*.cmx
-*.cmxs
-*.cmxa
-*.merlin
-*.install
-
-# jbuilder working directory
 _build/
-
-lib_test/_tests
+.merlin
+*.install
