--- a/hvsock.opam
+++ b/hvsock.opam
@@ -26,6 +26,7 @@ depends: [
   "fmt"
   "cmdliner"
   "sha"
+  "uri"
   "mirage-flow-lwt" {>= "1.2.0"}
   "mirage-time-lwt" {>= "1.0.0"}
   "cstruct" {>= "2.4.0"}
