--- a/hvsock.opam
+++ b/hvsock.opam
@@ -35,4 +35,8 @@ depends: [
   "alcotest" {test & >= "0.4.0"}
 ]
 
+depexts: [
+  [["alpine"] ["linux-headers"]]
+]
+
 available: [ ocaml-version >= "4.03.0" ]
