Windows: look up the VM's name using powershell
If the URI doesn't contain a valid GUID, then we run the powershell

  (Get-VM <foo>).Id

to try to discover the VM's GUID from the name. Note this requires
Administrator.

Signed-off-by: David Scott <dave@recoil.org>

--- a/hvsock.opam
+++ b/hvsock.opam
@@ -27,6 +27,9 @@ depends: [
   "cmdliner"
   "sha"
   "uri"
+  "base64"
+  "uuidm"
+  "uutf"
   "mirage-flow-lwt" {>= "1.2.0"}
   "mirage-time-lwt" {>= "1.0.0"}
   "cstruct" {>= "2.4.0"}
