opam: add "-p" name to "jbuilder subst"
Following review feedback on

https://github.com/ocaml/opam-repository/pull/12592

Signed-off-by: David Scott <dave@recoil.org>

--- a/hvsock.opam
+++ b/hvsock.opam
@@ -8,12 +8,12 @@ bug-reports: "https://github.com/mirage/ocaml-hvsock/issues"
 doc: "https://mirage.github.io/ocaml-hvsock"
 
 build: [
-  [ "jbuilder" "subst"] {pinned}
+  [ "jbuilder" "subst" "-p" name] {pinned}
   [ "jbuilder" "build" "-p" name "-j" jobs ]
 ]
 
 build-test:[
-  [ "jbuilder" "subst"] {pinned}
+  [ "jbuilder" "subst" "-p" name] {pinned}
   [ "jbuilder" "runtest" "-p" name "-j" jobs ]
 ]
 
