--- a/hvsock.opam
+++ b/hvsock.opam
@@ -8,13 +8,13 @@ bug-reports: "https://github.com/mirage/ocaml-hvsock/issues"
 doc: "https://mirage.github.io/ocaml-hvsock"
 
 build: [
-  [ "jbuilder" "subst" "-p" name] {pinned}
-  [ "jbuilder" "build" "-p" name "-j" jobs ]
+  [ "dune" "subst" ] {pinned}
+  [ "dune" "build" "-p" name "-j" jobs ]
 ]
 
 build-test:[
-  [ "jbuilder" "subst" "-p" name] {pinned}
-  [ "jbuilder" "runtest" "-p" name "-j" jobs ]
+  [ "dune" "subst" ] {pinned}
+  [ "dune" "runtest" "-p" name "-j" jobs ]
 ]
 
 depends: [
@@ -34,7 +34,7 @@ depends: [
   "mirage-time-lwt" {>= "1.0.0"}
   "cstruct" {>= "2.4.0"}
   "duration"
-  "jbuilder" {build & >="1.0+beta10"}
+  "dune" {build}
   "alcotest" {test & >= "0.4.0"}
 ]
 
