--- a/hvsock.opam
+++ b/hvsock.opam
@@ -34,7 +34,7 @@ depends: [
   "mirage-time-lwt" {>= "1.0.0"}
   "cstruct" {>= "2.4.0"}
   "duration"
-  "dune" {build}
+  "dune"
   "alcotest" {test & >= "0.4.0"}
 ]
 
