--- a/hvsock.opam
+++ b/hvsock.opam
@@ -33,6 +33,12 @@ depends: [
   "dune" {build}
   "alcotest" {with-test & >= "0.4.0"}
 ]
+depexts: [
+  ["linux-headers"] {os-distribution = "alpine"}
+  ["linux-libc-dev"] {os-family = "debian"}
+  ["kernel-headers"] {os-distribution = "fedora"}
+  ["kernel-headers"] {os-distribution = "rhel"}
+]
 synopsis: "Bindings for Hyper-V AF_VSOCK"
 description: """
 [![Build Status (Linux)](https://travis-ci.org/mirage/ocaml-hvsock.svg)](https://travis-ci.org/mirage/ocaml-hvsock)
