opam: fix from @mseri on ocaml/opam-repository#17611
Signed-off-by: David Scott <dave@recoil.org>

--- a/hvsock.opam
+++ b/hvsock.opam
@@ -30,7 +30,7 @@ depends: [
   "mirage-time-lwt" {>= "1.0.0"}
   "cstruct" {>= "2.4.0"}
   "duration"
-  "dune" {build}
+  "dune" {>= "1.2.0"}
   "alcotest" {with-test & >= "0.4.0"}
 ]
 depexts: [
