--- a/hvsock.opam
+++ b/hvsock.opam
@@ -1,17 +1,25 @@
 opam-version: "2.0"
+synopsis: "Bindings for Hyper-V AF_VSOCK"
+description: """\
+[![Build Status (Linux)](https://travis-ci.org/mirage/ocaml-hvsock.svg)](https://travis-ci.org/mirage/ocaml-hvsock)
+[![Build status (Windows)](https://ci.appveyor.com/api/projects/status/974tsg317b4k8xra?svg=true)](https://ci.appveyor.com/project/mirage/ocaml-hvsock/branch/master)
+
+These bindings allow Host <-> VM communication on Hyper-V systems on both Linux
+and Windows.
+
+*Warning*: the `AF_HYPERV` patches for Linux are not yet merged and hence the
+definition of `AF_HYPERV` is not yet stable. If other address families are merged
+before this one then the value of `AF_HYPERV` will change!
+
+Please read [the API documentation](https://djs55.github.io/ocaml-hvsock/index.html)."""
 maintainer: "dave@recoil.org"
-authors: [ "David Scott" "Rolf Neugebauer" "Anil Madhavapeddy" "Simon Ferquel"]
+authors: [
+  "David Scott" "Rolf Neugebauer" "Anil Madhavapeddy" "Simon Ferquel"
+]
 license: "ISC"
 homepage: "https://github.com/mirage/ocaml-hvsock"
-dev-repo: "git+https://github.com/mirage/ocaml-hvsock.git"
-bug-reports: "https://github.com/mirage/ocaml-hvsock/issues"
 doc: "https://mirage.github.io/ocaml-hvsock"
-
-build: [
-  [ "dune" "subst" ] {pinned}
-  [ "dune" "build" "-p" name "-j" jobs ]
-]
-
+bug-reports: "https://github.com/mirage/ocaml-hvsock/issues"
 depends: [
   "ocaml" {>= "4.03.0"}
   "base-bytes"
@@ -26,12 +34,17 @@ depends: [
   "base64" {>= "3.0.0"}
   "uuidm"
   "uutf"
-  "mirage-flow-lwt" {>= "1.2.0"}
-  "mirage-time-lwt" {>= "1.0.0"}
+  "mirage-flow" {>= "2.0.0"}
+  "mirage-flow-combinators" {>= "2.0.0"}
+  "mirage-time" {>= "2.0.0"}
   "cstruct" {>= "2.4.0"}
   "duration"
   "dune" {>= "1.2.0"}
   "alcotest" {with-test & >= "0.4.0"}
+]
+build: [
+  ["dune" "subst"] {pinned}
+  ["dune" "build" "-p" name "-j" jobs]
 ]
 depexts: [
   ["linux-headers"] {os-distribution = "alpine"}
@@ -39,16 +52,4 @@ depexts: [
   ["kernel-headers"] {os-distribution = "fedora"}
   ["kernel-headers"] {os-distribution = "rhel"}
 ]
-synopsis: "Bindings for Hyper-V AF_VSOCK"
-description: """
-[![Build Status (Linux)](https://travis-ci.org/mirage/ocaml-hvsock.svg)](https://travis-ci.org/mirage/ocaml-hvsock)
-[![Build status (Windows)](https://ci.appveyor.com/api/projects/status/974tsg317b4k8xra?svg=true)](https://ci.appveyor.com/project/mirage/ocaml-hvsock/branch/master)
-
-These bindings allow Host <-> VM communication on Hyper-V systems on both Linux
-and Windows.
-
-*Warning*: the `AF_HYPERV` patches for Linux are not yet merged and hence the
-definition of `AF_HYPERV` is not yet stable. If other address families are merged
-before this one then the value of `AF_HYPERV` will change!
-
-Please read [the API documentation](https://djs55.github.io/ocaml-hvsock/index.html)."""
+dev-repo: "git+https://github.com/mirage/ocaml-hvsock.git"
