--- a/lwt_unix/dune
+++ b/lwt_unix/dune
@@ -1,6 +1,6 @@
 (library
  (name        hvsock_lwt_unix)
  (public_name hvsock.lwt-unix)
- (libraries   lwt hvsock hvsock.lwt bytes mirage-time-lwt mirage-flow-lwt cstruct mirage-flow logs threads duration lwt.unix)
+ (libraries   lwt hvsock hvsock.lwt bytes mirage-time mirage-flow-combinators cstruct mirage-flow logs threads duration lwt.unix)
  (flags       (:standard -safe-string -principal -strict-sequence))
 )
